HelloUltraviolet/Fixtures/RejectedSource/Expressions/AsyncTypePathUnapplied/Expected.uv
//! Expected diagnostic metadata for the AsyncTypePathUnapplied rejected-source specimen.

expectedDiagnostic("E-CON-0201", "rule.21.WF-Async-Path-Err")
